# briny_ai

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.cargo/: audit.toml  config.toml
checkpoints/m-mnist/: model.bpat
checkpoints/m-xor/: model.bpat
checkpoints/test/: model.bpat  test_tensors.bpat  v0.bpat
checkpoints/transformer/: model.bpat
checkpoints/xor/: model.bpat
crates/briny-ai-proc/: Cargo.toml
crates/briny-ai-proc/src/: lib.rs
crates/briny_ai/: Cargo.toml  README.md
crates/briny_ai/examples/: m-mnist.rs  m-xor.rs
crates/briny_ai/src/: backend.rs  lib.rs
crates/briny_ai/src/abstracted/: data.rs  mod.rs
crates/briny_ai/src/abstracted/internal/: actfn.rs  loss.rs  mod.rs  optim.rs
crates/briny_ai/src/abstracted/layers/: dense.rs  mod.rs
crates/briny_ai/src/manual/: backprop.rs  diskio.rs  mod.rs
crates/briny_ai/src/manual/ops/: dispatch.rs  mod.rs
crates/briny_ai/src/manual/ops/cpu/: matmul.rs  mod.rs  mse_loss.rs  relu.rs  sgd.rs
crates/briny_ai/src/manual/ops/cuda/: mod.rs
crates/briny_ai/src/manual/ops/wgpu/: matmul.rs  mod.rs  mse.rs  relu.rs  sgd.rs
crates/briny_ai/src/manual/tensors/: mod.rs  optim.rs  vec.rs
crates/briny_ai/tests/: core.rs
examples/: char_rnn.rs  example.rs  llm_size.rs  m-mnist.rs  m-xor.rs  mnist.rs  small_lm_size.rs  time.rs  transformer.rs  xor.rs
src/: approx.rs  backend.rs  backprop.rs  lib.rs  modelio.rs  tensors.rs
src/internal/: layers.rs  mod.rs  test.rs
src/macros/: layers.rs  mod.rs  model_def.rs  test.rs
src/macros/layers/: activation.rs  attn.rs  bias.rs  causal_attn.rs  collapse.rs  conv.rs  dense.rs  ffn.rs  ln.rs  mod.rs  residual.rs  sigmoid.rs  softmax.rs  temporal.rs
src/macros/optim/: adam.rs  mod.rs  sgd.rs
src/nn/: mod.rs
src/nn/io/: mod.rs
src/nn/io/versions/: mod.rs  v0.rs  v1.rs  v1m.rs
src/nn/ops/: dispatch.rs  mod.rs
src/nn/ops/cpu/: adam.rs  binary_cross_entropy_loss.rs  cross_entropy_loss.rs  cross_entropy_nonzero_loss.rs  gelu.rs  matmul.rs  mod.rs  mse_loss.rs  relu.rs  sgd.rs  sigmoid.rs  softmax.rs  swish_silu.rs  tanh.rs
src/nn/ops/cuda/: mod.rs
src/nn/ops/wgpu/: matmul.rs  mod.rs  mse.rs  relu.rs  sgd.rs
src/nn/ops/wgpu/shaders/: matmul.wgsl  sgd.wgsl
src/nn/tensors/: mod.rs  optim.rs  vec.rs
src/ops/: cpu.rs  cuda.rs  dispatch.rs  mod.rs  wgpu.rs
src/ops/shaders/: matmul.wgsl  mse_loss.wgsl  relu.wgsl  sgd.wgsl
tests/: core.rs  tensor_tests.rs
