[package]
name = "briny_ai"
version = "0.6.0"
edition = "2021"
rust-version = "1.83.0"
description = "A tiny & efficient AI inference engine"
license = "MIT"
documentation = "https://docs.rs/briny_ai"
keywords = ["autograd", "tensor", "machine-learning", "neural-network", "ai"]
categories = ["science", "mathematics", "data-structures", "no-std", "no-std::no-alloc"]
repository = "https://github.com/bobbothe2nd/briny_ai"
readme = "README.md"

[profile.release]
opt-level = 3
codegen-units = 1
incremental = true
debug = false

[profile.release.package."*"]
opt-level = 3
codegen-units = 1

[features]
# abstraction levels
alloc = ["tensor_optim/alloc", "lazy_simd/alloc"] # no OS, but global allocator
std = ["alloc", "lazy_simd/std", "dep:crc32fast"] # underlying OS exists

# dynamically sized tensors
dyntensor = ["alloc"]

# allocate everything on the heap to minimize stack usage
no_stack = ["alloc"]

# tensor backends
wgpu = ["dep:wgpu", "dep:lazy_static", "std"]
cuda = ["wgpu", "std"]

[dependencies]
briny = "0.4.0"
lazy_simd = { path = "../lazy-simd" }
box_closure = "0.1.0"
tensor_optim =  { path = "../SAFE/Projects/tensor_optim" }
libm = "0.2.15"
crc32fast = { version = "1.5.0", default-features = false, optional = true }
lazy_static = { version = "1.5.0", default-features = false, optional = true }

[dev-dependencies]
rand = "0.9.1"
rand_distr = "0.5.1"

# Windows
[target.'cfg(target_family = "windows")'.dependencies.wgpu]
version = "26.0.1"
default-features = false
features = ["wgsl", "dx12"]
optional = true

# macOS
[target.'cfg(target_os = "macos")'.dependencies.wgpu]
version = "26.0.1"
default-features = false
features = ["wgsl", "metal", "vulkan-portability", "angle"]
optional = true

# Linux (Vulkan + GLES for fallback)
[target.'cfg(target_os = "linux")'.dependencies.wgpu]
version = "26.0.1"
default-features = false
features = ["wgsl", "vulkan", "gles"]
optional = true

# WebAssembly (WebGPU)
[target.'cfg(any(target_arch = "wasm32", target_arch = "wasm64", target_os = "wasi"))'.dependencies.wgpu]
version = "26.0.1"
default-features = false
features = ["wgsl", "webgpu", "webgl"]
optional = true

[target.'cfg(not(any(target_arch = "wasm32", target_arch = "wasm64", target_os = "wasi", target_os = "linux", target_os = "macos", target_family = "windows")))'.dependencies.wgpu]
version = "26.0.1"
default-features = false
features = [
    "std",
    "parking_lot",
    "vulkan",
    "vulkan-portability",
    "angle",
    "gles",
    "dx12",
    "metal",
    "wgsl",
    "webgpu",
]
optional = true

[[test]]
name = "core"
required-features = []

[[example]]
name = "m-mnist"
required-features = [
    "alloc", "std", "dyntensor",
]

[[example]]
name = "m-xor"
required-features = []

[[example]]
name = "xor"
required-features = [
    "alloc"
]

[[example]]
name = "transformer"
required-features = [
    "alloc", "std"
]

[[example]]
name = "time"
required-features = [
    "alloc", "std",
]

[[example]]
name = "llm_size"
required-features = [
    "alloc", "std", "dyntensor"
]

[[example]]
name = "small_lm_size"
required-features = [
    "alloc", "std", "dyntensor"
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]
targets = [
  "aarch64-apple-ios",
  "aarch64-linux-android",
  "wasm32-wasip1",
  "x86_64-apple-darwin",
  "x86_64-pc-windows-gnu",
  "x86_64-pc-windows-msvc",
  "x86_64-unknown-dragonfly",
  "x86_64-unknown-freebsd",
  "x86_64-unknown-illumos",
  "x86_64-unknown-linux-gnu",
  "x86_64-unknown-netbsd",
  "x86_64-unknown-openbsd",
  "x86_64-unknown-hermit",
]
