[package]
name = "briny_ai"
version = "0.3.0"
edition = "2024"
rust-version = "1.88.0"
description = "A tiny & efficient AI inference engine"
license = "MIT"
documentation = "https://docs.rs/briny_ai"
keywords = ["autograd", "tensor", "machine-learning"]
categories = ["science", "mathematics", "data-structures"]
repository = "https://github.com/bobbothe2nd/briny_ai"
readme = "README.md"

[dependencies]
briny = "0.3.1"
tensor_optim = "0.1.0"
box_closure = "0.1.0"
crc32fast = { version = "1.5.0", default-features = false, optional = true }
lazy_static = { version = "1.5.0", default-features = false, optional = true }
# briny-ai-proc = "0.1.0"

[features]
default = ["std", "wgpu"]
std = ["alloc", "dep:crc32fast"]
alloc = ["tensor_optim/alloc"]
dyntensor = ["alloc"]
wgpu = ["dep:wgpu", "dep:lazy_static", "std"]
cuda = ["wgpu", "std"]

[dependencies.wgpu]
version = "26.0.1"
default-features = false
features = [
    "dx12",
    "metal",
    "gles",
    "vulkan",
    "wgsl",
    "webgpu",
]
optional = true

[dev-dependencies]
reqwest = { version = "0.12", features = ["blocking"] }
flate2 = "1"
rand = "0.9.1"
rand_distr = "0.5.1"
approx = "0.5.1"
